# hvnc-manager

./: .gitignore  Cargo.toml  README.md
crates/client-win/: Cargo.toml
crates/client-win/src/: main.rs
crates/manager/: Cargo.toml
crates/manager/src/: main.rs  network.rs
crates/manager/src/network/: command.rs  endpoint.rs  event.rs  manager.rs  mod.rs  recv.rs
crates/manager/ui/: client_card.slint  common.slint  desktop_viewer.slint  main.slint  sidebar.slint  widgets.slint
crates/relay-server/: Cargo.toml
crates/relay-server/examples/: mock_client.rs
crates/relay-server/src/: config.rs  main.rs  quic.rs  session.rs  transport.rs
crates/shared/: Cargo.toml
crates/shared/src/: codec.rs  lib.rs
crates/shared/src/protocol/: handshake.rs  input.rs  liveness.rs  message.rs  mod.rs  session.rs  types.rs  video.rs
