[workspace]
resolver = "3"
members = [
    "crates/manager",
    "crates/relay-server",
    "crates/client-win",
    "crates/shared",
]

[workspace.dependencies]
# Internal crates
shared = { path = "crates/shared" }

# Async runtime
tokio = { version = "1.48", features = ["full"] }
futures = "0.3"

# Networking
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
] }
rcgen = "0.13"
webpki-roots = "0.26"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_repr = "0.1"
serde_json = "1.0"
bincode = "1.3"
bytes = "1.11"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# UI
slint = "1.9"
slint-build = "1.9"
