[package]
name = "manager"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.48", features = ["full"] }
slint = "1.9"
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "std",
] }
webpki-roots = "0.26"
anyhow = "1.0"
bytes = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[build-dependencies]
slint-build = "1.9"
