[package]
name = "manager"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { workspace = true }
tokio = { workspace = true }
slint = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }
