[package]
name = "relay-server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.48", features = ["full"] }
quinn = "0.11"
anyhow = "1.0"
bytes = "1.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
