[package]
name = "relay-server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { workspace = true }
tokio = { workspace = true }
quinn = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
serde_bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
